# atelier

./: .gitignore  Cargo.toml  NOTES.md  README.md  requirements-dev.txt  requirements.txt  setup.py  test.py
.cargo/: config.toml
macos_venv/: pyvenv.cfg
py_atelier/: dataio.py  folds.py  optimization.py  stats.py  time_series.py
src/: lib.rs  main.rs
src/structs/: core.rs  time_series.rs
